@@ -13,6 +13,8 @@ IMPROVEMENTS
 | VERSION: 0.4.6        |
 +-----------------------+
 BUGFIXES
+08-09-05    Server vars now interpreted correctly on IIS 6.0, note:
+            frontScriptName in config file MUST end with "?" (Miha Vrhovnik)
 08-09-05    The 'passwordmgr_redirectToEdit' failed because of case-sensitivity,
             now fixed
 02-09-05    Fallback to auto-detected language causing js errors in 
